--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Crate-Track</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="/css/style.css">
-</head>
-<body>
-
-	
-	<%include partials/navbar%>
-	<div class="container">
-		<div class="row">
-			<div class="col-xs-12">
-				<%- include partials/alerts%>
-				<%- body %>
-			</div>			
-		</div>		
-	</div>
-	
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="/js/ajax.js"></script>
+  <head>
+    
+    <title>BIRD-BLURB</title>
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" type="text/css" href="/style.css">
 
 
-</body>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  </head>
+  <%- body %>
+
+  <body>
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+  </body>
 </html>
