--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
   <div class="sci-name">
     <h2><%= bird.sciName %></h2>
   </div>
-  <div class="img-container" background="<%= bird.imgUrl%>" style="background-repeat:no-repeat" bgcolor="#000000" width="100%" height="430" valign="top">
-    <!-- <img class="bird-img" src='<%= bird.imgUrl %>'> -->
+  <div class="img-container">
+    <img class="bird-img" src='<%= bird.imgUrl %>'>
   </div>
 </div>
